# obs-shader-plugins

./: CMakeLists.txt  fft.c  fft.h  mtrandom.cpp  mtrandom.h  obs-shader-filter.c  obs-shader-filter.cpp  obs-shader-filter.hpp  readme.md  tinyexpr.c  tinyexpr.h
data/: default.effect
data/locale/: en-US.ini
shaders/: audio.shader  beat-shader.shader  chromatic.-abberation.shader  fog.shader
